Fixed white space issue

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,6 +13,8 @@ body,
   width: 0px;
 }
 
+
+
 a {
   color: inherit;
   text-decoration: none;
@@ -33,6 +35,7 @@ a {
 .cursor-change {
   cursor: pointer;
 }
+
 
 .navbar-container {
   display: flex;
@@ -210,7 +213,9 @@ span.text-red {
 .hero-banner-container .beats-solo {
   font-size: 20px;
 }
-
+.slick-next {
+  right: 0;
+}
 
 .hero-banner-container button {
   border-radius: 15px;
